[SELC-4306] fix: mapping legals and institutionId on getTokens (#194)
* avoid nullpointer

* update onboarding openapi and mapper

* unit test

* remove unused getting onboarded users

* remove unused users
